Se modifica forms

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="box-nombres-fecha-portada">
             <img class="mariposa_1" src="./img/mariposa_1.png" alt="" />
             <span class="fecha">10.03.2023</span>
-            <h1>Carmela</h1>
+            <h1>Carme</h1>
             <h2>Mis 15 años</h2>
           </div>
 
@@ -162,14 +162,13 @@
     <div class="">
       <h3 class="t_title"><span> Cena y fiesta </span></h3>
       <p class="text_description">
-        La fiesta será el día Sábado 18 de marzo. Los
-        espero a las 21:00 hs en 'Salon Casas Viejas Campo de Eventos', Malagueño, Córdoba.
+        Los espero a las 21:00 hs en el 'Salon Estancia Causana', Colectora ruta 20 km 18, Malagueño, Córdoba.
       </p>
     </div>
 
     <div class="">
       <div class="button">
-        <a target="_blank" href="https://g.page/casasviejaseventos?share" class="btn btn_green" role="button">
+        <a target="_blank" href="https://goo.gl/maps/fkUsvkaH35pbsWcJ9" class="btn btn_green" role="button">
           <span class="">ver mapa</span>
         </a>
       </div>
@@ -206,7 +205,7 @@
     <!-- confirmar con boton -->
     <div class="">
       <div class="button">
-        <a target="_blank" href="https://forms.gle/zi1s6zbQ38amVwb78" class="btn btn_green" role="button">
+        <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScfs_DpRa0c2nSaiRD8y5H__bj924WVwfIjTeh-GYqhz1bJHQ/viewform?embedded=true" class="btn btn_green" role="button">
           <span class="">CONFIRMAR</span>
         </a>
       </div>
@@ -279,7 +278,7 @@
 
     <div class="">
       <div class="button">
-        <a target="_blank" href="https://forms.gle/m54UYTUiKsmFADQz6" class="btn_music btn_green" role="button">
+        <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfU0XOviItO2iMFoYNnkSElg5Qb4kcdCAfSt-uvtIrwC0v89A/viewform?usp=sf_link" class="btn_music btn_green" role="button">
           <span class="">SUGERIR MUSICA</span>
         </a>
       </div>
@@ -300,21 +299,27 @@
         quieres también puedes hacerme un regalo de cumpleaños. En el salon
         tendras una lugar especifico para dejar tu obsequio</p>
     </div>
+    <div class="text_description">
+      <p>Maria Carmela Caruso Filafilo
+        CVU: 0000003100085668323388
+        Alias: carmeliiita
+        CUIT/CUIL: 27485347734
+        Mercado Pago</p>
+    </div>
 
   </section>
 
   <section class="instagram">
     <div class="">
-      <h3 class="hashtag_mode">
-        #Cumple15Cande
-      </h3>
-    </div>
-    <div class="">
       <h4 class="modo-hashtag">
-        Usa el hashtag y subi tus fotos y videos
+        En la fiesta, subi las fotos etiquetando a:
       </h4>
     </div>
-
+    <div class="">
+      <h3 class="hashtag_mode">
+        @Mis15bycarme
+      </h3>
+    </div>   
   </section>
 
 
