actualizacion de regalos

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
           <li class="carousel__item"><img src="./img/galeria/2.jpg" alt=""></li>
           <li class="carousel__item"><img src="./img/galeria/3.jpg" alt=""></li>
           <li class="carousel__item"><img src="./img/galeria/4.jpg" alt=""></li>
-          <li class="carousel__item"><img src="./img/galeria/1.jpg" alt=""></li>
+          <li class="carousel__item"><img src="./img/galeria/5.jpg" alt=""></li>
         </ul>
         <div class="carousel__prev">
           <label for="carousel-1"></label>
@@ -295,18 +295,28 @@
       <h3 class="t_title"><span> Regalo </span></h3>
     </div>
     <div class="text_description">
-      <p>Lo más importante es tu presencia en mi fiesta, pero si
-        quieres también puedes hacerme un regalo de cumpleaños. En el salon
-        tendras una lugar especifico para dejar tu obsequio</p>
+      <p>Lo más importante es tu presencia, pero si
+        quieres también puedes hacerme un regalo.</p>
     </div>
-    <div class="text_description">
+
+    <!-- Regalo con boton -->
+    <div class="">
+      <div class="button">
+        <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScfs_DpRa0c2nSaiRD8y5H__bj924WVwfIjTeh-GYqhz1bJHQ/viewform?embedded=true" class="btn btn_green" role="button">
+          <span class="">Regalar</span>
+        </a>
+      </div>
+    </div>
+
+    <!-- datos bancarios -->
+    <!-- <div class="text_description">
       <p>Maria Carmela Caruso Filafilo
         CVU: 0000003100085668323388
         Alias: carmeliiita
         CUIT/CUIL: 27485347734
         Mercado Pago</p>
-    </div>
-
+    </div> -->
+    <!-- -------------------- -->
   </section>
 
   <section class="instagram">
@@ -317,31 +327,15 @@
     </div>
     <div class="">
       <h3 class="hashtag_mode">
-        @Mis15bycarme
+        @Mis15Carme
       </h3>
     </div>   
   </section>
 
 
   <section class="los_espero">
-    <div class="text_h3_losespero">
-
-      <h3 class="playful" aria-label="Wash your hands">
-        <span aria-hidden="true">¡</span>
-        <span aria-hidden="true">l</span>
-        <span aria-hidden="true">o</span>
-        <span aria-hidden="true">s <br /></span>
-        <span aria-hidden="true"> </span>
-        <span aria-hidden="true"> </span>
-        <span aria-hidden="true">e</span>
-        <span aria-hidden="true">s</span>
-        <span aria-hidden="true">p</span>
-        <span aria-hidden="true">e</span>
-        <span aria-hidden="true">r</span>
-        <span aria-hidden="true">o</span>
-        <span aria-hidden="true">!</span>
-      </h3>
-      <!-- <h3 class="t_title"><span> ¡Los espero! </span></h3> -->
+    <div class="">
+      <h3 class="t_title"><span> Los Espero! </span></h3>
     </div>
   </section>
 
