--- a/index.html
+++ b/index.html
@@ -299,24 +299,32 @@
         quieres también puedes hacerme un regalo.</p>
     </div>
 
-    <!-- Regalo con boton -->
-    <div class="">
-      <div class="button">
-        <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScfs_DpRa0c2nSaiRD8y5H__bj924WVwfIjTeh-GYqhz1bJHQ/viewform?embedded=true" class="btn btn_green" role="button">
-          <span class="">Regalar</span>
-        </a>
-      </div>
-    </div>
 
-    <!-- datos bancarios -->
-    <!-- <div class="text_description">
-      <p>Maria Carmela Caruso Filafilo
-        CVU: 0000003100085668323388
-        Alias: carmeliiita
-        CUIT/CUIL: 27485347734
-        Mercado Pago</p>
-    </div> -->
-    <!-- -------------------- -->
+    <!-- Regalo con boton -->
+      <div class="button">
+        <label for="btn-modal" class="btn_music btn_green">
+            Regalar
+        </label>
+      </div>
+
+    <!--Ventana Modal-->
+    <input type="checkbox" id="btn-modal">
+    <div class="container-modal">
+        <div class="content-modal">
+            <h2>Datos bancarios</h2>
+            <p>Maria Carmela Caruso Filafilo
+              CVU: 0000003100085668323388
+              Alias: carmeliiita
+              CUIT/CUIL: 27485347734
+              Mercado Pago</p>
+            <div class="btn-cerrar">
+                <label for="btn-modal">Cerrar</label>
+            </div>
+        </div>
+        <label for="btn-modal" class="cerrar-modal"></label>
+    </div>
+    <!--Fin de Ventana Modal-->
+ 
   </section>
 
   <section class="instagram">
