actualizacion fotos y portada

--- a/index.html
+++ b/index.html
@@ -84,19 +84,21 @@
         <div class="content-portada text-center">
 
           <div class="box-nombres-fecha-portada">
-            <img class="mariposa_1" src="./img/mariposa_1.png" alt="" />
-            <span class="fecha">10.03.2023</span>
-            <h1>Carme</h1>
+            <!-- <img class="mariposa_1" src="./img/mariposa_1.png" alt="" /> -->
             <h2>Mis 15 años</h2>
+            <h1>Carme</h1>
+            <span class="fecha">10.03.2023</span>
           </div>
 
           <div class="box-frase-portada">
 
-            <lottie-player class="prop_ico" src="https://assets7.lottiefiles.com/packages/lf20_rqo8mcum.json"
+            <!-- <lottie-player class="prop_ico" src="https://assets7.lottiefiles.com/packages/lf20_rqo8mcum.json"
               background="transparent" speed="1" style="width: 170px; height: 70px;" loop autoplay
-              align-items=center></lottie-player>
+              align-items=center></lottie-player> -->
 
-            <p>Te espero para compartir una noche que será mágica e inolvidable. <br /></p>
+              
+                <p>Te espero para compartir una noche que será mágica e inolvidable. <br /></p>
+              
 
             <lottie-player class="prop_ico" src="https://assets7.lottiefiles.com/packages/lf20_rqo8mcum.json"
               background="transparent" speed="1" style="width: 170px; height: 70px;" loop autoplay
@@ -228,11 +230,11 @@
         <input type="radio" id="carousel-4" name="carousel[]">
         <input type="radio" id="carousel-5" name="carousel[]">
         <ul class="carousel__items">
-          <li class="carousel__item"><img src="./img/galeria/1.jpg" alt=""></li>
+          <li class="carousel__item"><img src="./img/galeria/5.jpg" alt=""></li>
           <li class="carousel__item"><img src="./img/galeria/2.jpg" alt=""></li>
+          <li class="carousel__item"><img src="./img/galeria/1.jpg" alt=""></li>
           <li class="carousel__item"><img src="./img/galeria/3.jpg" alt=""></li>
           <li class="carousel__item"><img src="./img/galeria/4.jpg" alt=""></li>
-          <li class="carousel__item"><img src="./img/galeria/5.jpg" alt=""></li>
         </ul>
         <div class="carousel__prev">
           <label for="carousel-1"></label>
