--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
                 <p>Te espero para compartir una noche que será mágica e inolvidable. <br /></p>
               
 
-            <lottie-player class="prop_ico" src="https://assets7.lottiefiles.com/packages/lf20_rqo8mcum.json"
+            <!-- <lottie-player class="prop_ico" src="https://assets7.lottiefiles.com/packages/lf20_rqo8mcum.json"
               background="transparent" speed="1" style="width: 170px; height: 70px;" loop autoplay
-              align-items=center></lottie-player>
+              align-items=center></lottie-player> -->
           </div>
 
           <div class="flecha">
@@ -111,9 +111,7 @@
               align-items=center></lottie-player>
           </div>
         </div>
-        <div class="d-flex justify-content-center align-items-center">
-          <div class="flecha-continuar"></div>
-        </div>
+        
       </div>
     </div>
     </div>
