--- a/index.html
+++ b/index.html
@@ -12,20 +12,18 @@
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Dancing+Script:wght@500&family=League+Spartan&family=Poppins:wght@200&display=swap"
-    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Arizonia&family=Dancing+Script:wght@500&family=League+Spartan&family=Poppins:wght@200&display=swap" rel="stylesheet">
+
 
   <!-- Script Js -->
   <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-
   <script src='main.js'></script>
 
 </head>
 
-<body>
+<body class="contenedor-body">
+  
   <!-- Sonido de fondo -->
 
   <button class="btn-ms" onclick="playOrPause()">
@@ -318,7 +316,7 @@
               CUIT/CUIL: 27485347734
               Mercado Pago</p>
             <div class="btn-cerrar">
-                <label for="btn-modal">Cerrar</label>
+                <label for="btn-modal"> Cerrar </label>
             </div>
         </div>
         <label for="btn-modal" class="cerrar-modal"></label>
