Se modifica hashtag

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     </div>
     <div class="">
       <h3 class="hashtag_mode">
-        @Mis15bycarme
+        @mis15bycarme
       </h3>
     </div>   
   </section>
